test/spec/f32.store32.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/f32.store32.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
third_party/testsuite/f32.store32.fail.wast:1:51: unexpected token "f32.store32"
... 1) (func (param i32) (param f32) (f32.store32 (get_local 0) (get_local 1))))
                                      ^^^^^^^^^^^
third_party/testsuite/f32.store32.fail.wast:1:63: syntax error, unexpected (
... 1) (func (param i32) (param f32) (f32.store32 (get_local 0) (get_local 1))))
                                                  ^

;;; STDERR ;;)
